cat-server/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cat-server-v2
  labels:
    app: cat-server
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cat-server
      version: v2
  template:
    metadata:
      labels:
        app: cat-server
        version: v2
    spec:
      containers:
        - name: cat-server
          image: aaronyunan/cat-server:7
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
