cat-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cat-server
spec:
  selector:
    app: cat-server
  ports:
    - name: http
      port: 8080
      targetPort: 8080  
  type: ClusterIP
