cat-server/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cat-server
spec:
  gateways:
    - cat-gateway
  hosts:
    - "*"
  http:
    - name: cat-server
      match:
        - uri:
            prefix: /cat-server
      route:
        - destination:
            host: cat-server
            port:
              number: 8080
            subset: v1
          weight: 90
        - destination:
            host: cat-server
            port:
              number: 8080
            subset: v2
          weight: 10
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx
